fix(ui): adjust bank title spacing, fix font-family attr

--- a/phenomenality-v2-nextjs/src/app/bank/_components/Card.sass
+++ b/phenomenality-v2-nextjs/src/app/bank/_components/Card.sass
@@ -1,10 +1,11 @@
 .tag-desc
+  font-family: 'Source Sans 3'
   margin-left: 50px
   font-size: 20px
   margin-top: -10px
 
 .card-list p
-  font-family: Source Sans 3
+  font-family: 'Source Sans 3'
   display: flex
   justify-content: center
 
