--- a/phenomenality-v2-nextjs/src/app/bank/_styles/page.module.sass
+++ b/phenomenality-v2-nextjs/src/app/bank/_styles/page.module.sass
@@ -25,3 +25,11 @@ p .left-align-tag-desc
   float: right
   padding-bottom: 100px
   font-size: 28px
+
+.tag-desc
+  font-family: 'Source Sans 3'
+  margin-left: 50px
+  font-size: 20px
+  margin-top: -10px
+  justify-content: center
+  display: flex
